# snoop

./: .gitignore  .gitmodules  .mookme.json  package-lock.json  package.json  setup.sh
.hooks/: pre-commit.json
backend/: .gitignore  Makefile  README.md  docker_build.sh  logging-dev.cfg  logging-prod.cfg  pyproject.toml  settings.toml
backend/.hooks/: pre-commit.json
backend/backend/: __init__.py  app.db  app.py  config.py  forms.py  logging.py  manage.py  models.py  routes.py  test_app.py  utils.py
backend/backend/blueprints/: __init__.py
backend/backend/blueprints/helloworld/: __init__.py
backend/backend/blueprints/login/: __init__.py  forms.py  models.py  routes.py  test_models.py
backend/backend/blueprints/login/templates/: bloke.html  login.html
backend/backend/ext/: __init__.py
backend/backend/ext/bcrypt/: __init__.py
backend/backend/ext/db/: __init__.py
backend/backend/ext/migrate/: __init__.py
backend/backend/templates/: bloke.html  index.html
backend/backend/tests/: conftest.py  test_login.py
backend/docker/: Dockerfile
backend/hooks/: pre-commit.json
backend/migrations/: env.py
backend/migrations/versions/: 498781ed3b8b_.py  620f1272ebd1_.py  af48982da493_.py
backend/tests/backend/: test_logging.py
