[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Simon Woodward <simon@redcabbage.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.2"
flask-bcrypt = "^1.0.1"
flask-migrate = "^4.0.0"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
