[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Simon Woodward <simon@redcabbage.org>"]
readme = "README.md"
repository = "https://github.com/seamonstr/snoop"

exclude = [
    "backend/tests",
    "**/test_*.py"
]

[tool.poetry.dependencies]
python = "^3.10"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.2"
flask-bcrypt = "^1.0.1"
flask-migrate = "^4.0.0"
flask = "^2.2.2"
structlog = "^22.3.0"
flask-wtf = "^1.0.1"
markupsafe = "^2.1.1"
dynaconf = "^3.1.11"
email-validator = "^1.3.0"
is-safe-url = "^1.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pyproject-flake8 = "^6.0.0"
black = {version = "^22.10.0", allow-prereleases = true}
sqlalchemy-stubs = "^0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ".venv"
max-line-length = 160

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "wtforms",
    "wtforms.fields",
    "wtforms.validators",
    "flask_login",
    "flask_migrate",
    "flask_bcrypt",
    "dynaconf",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
log_level = "INFO"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"